[package]
name = "prettyprint"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/mre/prettyprint"
version = "0.7.1"
edition = "2018"
authors = [
    "Matthias Endler <matthias-endler@gmx.net>",
]
categories = [
    "command-line-interface",
    "parsing",
]
description = "Print beautifully formatted files and strings to your terminal"
documentation = "https://github.com/mre/prettyprint/blob/master/README.md"
homepage = "https://github.com/mre/prettyprint"
keywords = [
    "syntax", 
    "highlighting", 
    "highlighter",
    "colouring",
    "prettyprint"
]

[dependencies]
ansi_colours = "1.0.1"
error-chain = "0.12.0"
ansi_term = "0.12.0"
clap = "2.32.0"
console = "0.9.0"
content_inspector = "0.2.4"
directories = "2.0.2"
encoding = "0.2.33"
shell-words = "0.1.0"
syntect = "3.2.1"
lazy_static = "1.3.0"
atty = "0.2.11"
derive_builder = "0.7.1"
