[package]
name = "prettyprint"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/mre/prettyprint"
version = "0.8.0"
edition = "2018"
authors = [
    "Matthias Endler <matthias-endler@gmx.net>",
]
categories = [
    "command-line-interface",
    "parsing",
]
description = "Print beautifully formatted files and strings to your terminal"
documentation = "https://github.com/mre/prettyprint/blob/master/README.md"
homepage = "https://github.com/mre/prettyprint"
keywords = [
    "syntax", 
    "highlighting", 
    "highlighter",
    "colouring",
    "prettyprint"
]

[dependencies]
ansi_colours = "1.0.1"
error-chain = "0.12.2"
ansi_term = "0.12.1"
clap = "2.33.0"
console = "0.10.0"
content_inspector = "0.2.4"
directories = "2.0.2"
encoding = "0.2.33"
shell-words = "0.1.0"
lazy_static = "1.4.0"
atty = "0.2.14"
derive_builder = "0.9.0"

[dependencies.syntect]
version = "4.1.0"
default-features = false
features = ["parsing", "dump-load"]

[features]
default = ["regex-onig"]
regex-onig = ["syntect/regex-onig"] # Use the "oniguruma" regex engine
regex-fancy = ["syntect/regex-fancy"] # Use the pure rust "fancy-regex" engine
